# taa-tracker

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
data/: 5t4.json  _coverage-5t4.txt  _coverage-b7-h3.txt  _coverage-bcma.txt  _coverage-cldn18-2.txt  _coverage-her2.txt  _coverage-ror1.txt  antigens.yaml  b7-h3.json  b7-h4.json  bcma.json  cldn18-2.json  conferences.yaml  drug_modality.yaml  her2.json  ror1.json  snapshots.db
data/tpp/: b7-h3.yaml  bcma.yaml  cldn18-2.yaml  her2.yaml  ror1.yaml
static/: system.css
taa/: __init__.py  audit_matches.py  catalysts.py  cli.py  llm_narratives.py  normalize.py  render.py  schema.py  snapshots.py  synth.py
taa/sources/: __init__.py  ctgov.py  edgar.py  ema.py  europepmc.py  fda.py  news.py  openalex.py  opentargets.py  pubmed.py  reporter.py
templates/: antigen.html  base.html  index.html
