[project]
name = "taa-tracker"
version = "0.1.0"
description = "Tumour-associated antigen tracker — modality cross-cut scorecards for biotech BD"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rsingla92" }]
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "ruamel.yaml>=0.18",  # preserves comments + ordering for drug_modality.yaml edits
    "openpyxl>=3.1",  # EMA EPAR XLSX bulk download parser
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]

[project.scripts]
taa-refresh = "taa.cli:refresh"
taa-audit = "taa.cli:audit"
taa-audit-matches = "taa.audit_matches:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "live_llm: tests that call Anthropic API (skipped by default)",
    "live_http: tests that call real source APIs (skipped by default)",
]
